OSGeo4W/apps/grass/grass-6.4.2RC2/include/grass/display.h



/* raster2.c */
int D_set_overlay_mode(int);

int D_color(CELL, struct Colors *);

int D_c_color(CELL, struct Colors *);

int D_d_color(DCELL, struct Colors *);

int D_f_color(FCELL, struct Colors *);

int D_color_of_type(const void *, struct Colors *, RASTER_MAP_TYPE);


/* setup.c */
int D_setup(int);


/* symbol.c */
void D_symbol(const SYMBOL *, int, int, const RGBA_Color *,
	      const RGBA_Color *);

void D_symbol2(const SYMBOL *, int, int, const RGBA_Color *,
	       const RGBA_Color *);


/* tran_colr.c */
int D_translate_color(const char *);

int D_parse_color(const char *, int);

int D_raster_use_color(int);

int D_color_number_to_RGB(int, int *, int *, int *);


/* window.c */
int D_new_window(char *, int, int, int, int);

int D_new_window_percent(char *, float, float, float, float);

int D_set_cur_wind(const char *);

int D_get_cur_wind(char *);

int D_show_window(int);

int D_get_screen_window(int *, int *, int *, int *);

int D_check_map_window(struct Cell_head *);

int D_reset_screen_window(int, int, int, int);

int D_timestamp(void);

void D_remove_window(void);

void D_erase_window(void);

void D_erase(const char *);

void D_remove_windows(void);

void D_full_screen(void);