invest/OSGeo4W/apps/grass/grass-6.4.2RC2/etc/python/grass/lib/display.py


# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\display.h: 108
if hasattr(_libs['grass_display.6.4.2RC2'], 'D_set_overlay_mode'):
    D_set_overlay_mode = _libs['grass_display.6.4.2RC2'].D_set_overlay_mode
    D_set_overlay_mode.restype = c_int
    D_set_overlay_mode.argtypes = [c_int]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\display.h: 109
if hasattr(_libs['grass_display.6.4.2RC2'], 'D_color'):
    D_color = _libs['grass_display.6.4.2RC2'].D_color
    D_color.restype = c_int
    D_color.argtypes = [CELL, POINTER(struct_Colors)]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\display.h: 110
if hasattr(_libs['grass_display.6.4.2RC2'], 'D_c_color'):
    D_c_color = _libs['grass_display.6.4.2RC2'].D_c_color
    D_c_color.restype = c_int
    D_c_color.argtypes = [CELL, POINTER(struct_Colors)]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\display.h: 111
if hasattr(_libs['grass_display.6.4.2RC2'], 'D_d_color'):
    D_d_color = _libs['grass_display.6.4.2RC2'].D_d_color
    D_d_color.restype = c_int
    D_d_color.argtypes = [DCELL, POINTER(struct_Colors)]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\display.h: 112
if hasattr(_libs['grass_display.6.4.2RC2'], 'D_f_color'):
    D_f_color = _libs['grass_display.6.4.2RC2'].D_f_color
    D_f_color.restype = c_int
    D_f_color.argtypes = [FCELL, POINTER(struct_Colors)]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\display.h: 113
if hasattr(_libs['grass_display.6.4.2RC2'], 'D_color_of_type'):
    D_color_of_type = _libs['grass_display.6.4.2RC2'].D_color_of_type
    D_color_of_type.restype = c_int
    D_color_of_type.argtypes = [POINTER(None), POINTER(struct_Colors), RASTER_MAP_TYPE]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\display.h: 116
if hasattr(_libs['grass_display.6.4.2RC2'], 'D_setup'):
    D_setup = _libs['grass_display.6.4.2RC2'].D_setup
    D_setup.restype = c_int
    D_setup.argtypes = [c_int]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\display.h: 119
if hasattr(_libs['grass_display.6.4.2RC2'], 'D_symbol'):
    D_symbol = _libs['grass_display.6.4.2RC2'].D_symbol
    D_symbol.restype = None
    D_symbol.argtypes = [POINTER(SYMBOL), c_int, c_int, POINTER(RGBA_Color), POINTER(RGBA_Color)]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\display.h: 121
if hasattr(_libs['grass_display.6.4.2RC2'], 'D_symbol2'):
    D_symbol2 = _libs['grass_display.6.4.2RC2'].D_symbol2
    D_symbol2.restype = None
    D_symbol2.argtypes = [POINTER(SYMBOL), c_int, c_int, POINTER(RGBA_Color), POINTER(RGBA_Color)]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\display.h: 125
if hasattr(_libs['grass_display.6.4.2RC2'], 'D_translate_color'):
    D_translate_color = _libs['grass_display.6.4.2RC2'].D_translate_color
    D_translate_color.restype = c_int
    D_translate_color.argtypes = [String]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\display.h: 126
if hasattr(_libs['grass_display.6.4.2RC2'], 'D_parse_color'):
    D_parse_color = _libs['grass_display.6.4.2RC2'].D_parse_color
    D_parse_color.restype = c_int
    D_parse_color.argtypes = [String, c_int]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\display.h: 127
if hasattr(_libs['grass_display.6.4.2RC2'], 'D_raster_use_color'):
    D_raster_use_color = _libs['grass_display.6.4.2RC2'].D_raster_use_color
    D_raster_use_color.restype = c_int
    D_raster_use_color.argtypes = [c_int]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\display.h: 128
if hasattr(_libs['grass_display.6.4.2RC2'], 'D_color_number_to_RGB'):
    D_color_number_to_RGB = _libs['grass_display.6.4.2RC2'].D_color_number_to_RGB
    D_color_number_to_RGB.restype = c_int
    D_color_number_to_RGB.argtypes = [c_int, POINTER(c_int), POINTER(c_int), POINTER(c_int)]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\display.h: 131
if hasattr(_libs['grass_display.6.4.2RC2'], 'D_new_window'):
    D_new_window = _libs['grass_display.6.4.2RC2'].D_new_window
    D_new_window.restype = c_int
    D_new_window.argtypes = [String, c_int, c_int, c_int, c_int]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\display.h: 132
if hasattr(_libs['grass_display.6.4.2RC2'], 'D_new_window_percent'):
    D_new_window_percent = _libs['grass_display.6.4.2RC2'].D_new_window_percent
    D_new_window_percent.restype = c_int
    D_new_window_percent.argtypes = [String, c_float, c_float, c_float, c_float]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\display.h: 133
if hasattr(_libs['grass_display.6.4.2RC2'], 'D_set_cur_wind'):
    D_set_cur_wind = _libs['grass_display.6.4.2RC2'].D_set_cur_wind
    D_set_cur_wind.restype = c_int
    D_set_cur_wind.argtypes = [String]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\display.h: 134
if hasattr(_libs['grass_display.6.4.2RC2'], 'D_get_cur_wind'):
    D_get_cur_wind = _libs['grass_display.6.4.2RC2'].D_get_cur_wind
    D_get_cur_wind.restype = c_int
    D_get_cur_wind.argtypes = [String]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\display.h: 135
if hasattr(_libs['grass_display.6.4.2RC2'], 'D_show_window'):
    D_show_window = _libs['grass_display.6.4.2RC2'].D_show_window
    D_show_window.restype = c_int
    D_show_window.argtypes = [c_int]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\display.h: 136
if hasattr(_libs['grass_display.6.4.2RC2'], 'D_get_screen_window'):
    D_get_screen_window = _libs['grass_display.6.4.2RC2'].D_get_screen_window
    D_get_screen_window.restype = c_int
    D_get_screen_window.argtypes = [POINTER(c_int), POINTER(c_int), POINTER(c_int), POINTER(c_int)]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\display.h: 137
if hasattr(_libs['grass_display.6.4.2RC2'], 'D_check_map_window'):
    D_check_map_window = _libs['grass_display.6.4.2RC2'].D_check_map_window
    D_check_map_window.restype = c_int
    D_check_map_window.argtypes = [POINTER(struct_Cell_head)]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\display.h: 138
if hasattr(_libs['grass_display.6.4.2RC2'], 'D_reset_screen_window'):
    D_reset_screen_window = _libs['grass_display.6.4.2RC2'].D_reset_screen_window
    D_reset_screen_window.restype = c_int
    D_reset_screen_window.argtypes = [c_int, c_int, c_int, c_int]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\display.h: 139
if hasattr(_libs['grass_display.6.4.2RC2'], 'D_timestamp'):
    D_timestamp = _libs['grass_display.6.4.2RC2'].D_timestamp
    D_timestamp.restype = c_int
    D_timestamp.argtypes = []

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\display.h: 140
if hasattr(_libs['grass_display.6.4.2RC2'], 'D_remove_window'):
    D_remove_window = _libs['grass_display.6.4.2RC2'].D_remove_window
    D_remove_window.restype = None
    D_remove_window.argtypes = []

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\display.h: 141
if hasattr(_libs['grass_display.6.4.2RC2'], 'D_erase_window'):
    D_erase_window = _libs['grass_display.6.4.2RC2'].D_erase_window
    D_erase_window.restype = None
    D_erase_window.argtypes = []

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\display.h: 142
if hasattr(_libs['grass_display.6.4.2RC2'], 'D_erase'):
    D_erase = _libs['grass_display.6.4.2RC2'].D_erase
    D_erase.restype = None
    D_erase.argtypes = [String]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\display.h: 143
if hasattr(_libs['grass_display.6.4.2RC2'], 'D_remove_windows'):
    D_remove_windows = _libs['grass_display.6.4.2RC2'].D_remove_windows
    D_remove_windows.restype = None
    D_remove_windows.argtypes = []

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\display.h: 144
if hasattr(_libs['grass_display.6.4.2RC2'], 'D_full_screen'):
    D_full_screen = _libs['grass_display.6.4.2RC2'].D_full_screen
    D_full_screen.restype = None
    D_full_screen.argtypes = []

# No inserted files

